--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:background="@drawable/logp">
+    android:background="@drawable/logp"
+
+    >
 
     <EditText
         android:id="@+id/ett_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="290dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:hint="请输入账号"
@@ -22,30 +24,54 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/ett_account"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="25dp"
         android:layout_marginStart="50dp"
         android:layout_marginEnd="50dp"
         android:hint="请输入密码"
         />
 
-    <Button
-        android:id="@+id/btn_login"
+    <CheckBox
+        android:id="@+id/isMemorize"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ett_password"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="40dp"
-        android:text="登  录" />
+        android:layout_marginLeft="80dp"
+        android:text="记住密码" />
+
+    <CheckBox
+        android:text="自动登录"
+        android:id="@+id/isAuto"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ett_password"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="80dp"
+        />
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/ett_password"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="50dp"
+        android:text="登  录"
+        android:textSize="18dp"
+        android:typeface="monospace"
+        android:background="@drawable/button_circle_shape"
+        />
 
     <Button
         android:id="@+id/btn_register"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:text="注  册"
-        android:layout_toRightOf="@id/btn_login"
-        android:layout_alignBottom="@id/btn_login"
-        android:layout_marginLeft="60dp"
-
+        android:textSize="18dp"
+        android:typeface="monospace"
+        android:layout_below="@id/btn_login"
+        android:layout_marginTop="20dp"
+        android:layout_centerHorizontal="true"
+        android:background="@drawable/button_circle_shape"
         />
 
 </RelativeLayout>
