--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         />
 
     <CheckBox
-        android:id="@+id/isMemorize"
+        android:id="@+id/cb_remeberpwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ett_password"
@@ -39,7 +39,7 @@
 
     <CheckBox
         android:text="自动登录"
-        android:id="@+id/isAuto"
+        android:id="@+id/cb_autologin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/ett_password"
