--- a/app/src/main/res/layout/fragment_pho1fragment.xml
+++ b/app/src/main/res/layout/fragment_pho1fragment.xml
@@ -1,14 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".pho1fragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+    <ImageButton
+        android:id="@+id/btn_takephotos"
+        android:layout_width="132dp"
+        android:layout_height="127dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginTop="300dp"
+        android:background="@drawable/take_pictures"
+        />
 
-</FrameLayout>
+    <ImageButton
+        android:id="@+id/btn_history"
+        android:layout_width="132dp"
+        android:layout_height="127dp"
+        android:layout_toRightOf="@id/btn_takephotos"
+        android:layout_alignTop="@id/btn_takephotos"
+        android:layout_marginLeft="30dp"
+        android:background="@drawable/history_records"
+        />
+
+</RelativeLayout>
