--- a/app/src/main/res/layout/camera_diy.xml
+++ b/app/src/main/res/layout/camera_diy.xml
@@ -6,7 +6,8 @@
     <SurfaceView
         android:id="@+id/SurfaceView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        />
 
     <ImageButton
         android:layout_width="60dp"
