--- a/app/src/main/res/layout/take_photos.xml
+++ b/app/src/main/res/layout/take_photos.xml
@@ -35,8 +35,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/add"
-        android:scaleType="fitCenter"
-        />
+        android:scaleType="fitCenter" />
 
     <RadioGroup
         android:id="@+id/rg_bg1"
