--- a/app/src/main/res/layout/take_photos.xml
+++ b/app/src/main/res/layout/take_photos.xml
@@ -10,11 +10,10 @@
         android:id="@+id/ett_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="60dp"
         android:layout_marginEnd="30dp"
-        android:hint="请输入标题"
-        />
+        android:hint="请输入标题" />
 
     <EditText
         android:id="@+id/ett_sub"
@@ -101,17 +100,16 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/bt_upload"
+        android:id="@+id/btn_upload"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/img_photo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="230dp"
+        android:background="@drawable/button_circle_shape"
         android:text="上传"
         android:textSize="18dp"
-        android:typeface="monospace"
-        android:background="@drawable/button_circle_shape"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/img_photo"
-        android:layout_marginTop="230dp"
-        />
+        android:typeface="monospace" />
 
 
 </RelativeLayout>
