--- a/app/src/main/res/layout/take_photos.xml
+++ b/app/src/main/res/layout/take_photos.xml
@@ -10,10 +10,11 @@
         android:id="@+id/ett_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="30dp"
         android:layout_marginTop="60dp"
+        android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
-        android:hint="请输入标题" />
+        android:hint="请输入标题"
+        />
 
     <EditText
         android:id="@+id/ett_sub"
@@ -31,7 +32,7 @@
         android:layout_width="101dp"
         android:layout_height="104dp"
         android:layout_below="@id/ett_sub"
-        android:layout_marginLeft="30dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="40dp"
         android:background="@drawable/add"
         android:scaleType="fitCenter" />
@@ -50,7 +51,7 @@
             android:id="@+id/rb_safe"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             android:text="安全隐患"
             />
 
@@ -58,7 +59,7 @@
             android:id="@+id/rb_clear"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:text="卫生问题"
             />
 
@@ -66,7 +67,7 @@
             android:id="@+id/rb_zhixu"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:text="秩序问题"
             />
     </RadioGroup>
@@ -77,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/ett_sub"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="70dp"
+        android:layout_marginStart="70dp"
         android:layout_marginTop="220dp"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -86,7 +87,7 @@
             android:id="@+id/rb_imp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
+            android:layout_marginStart="30dp"
             android:text="重要"
             />
 
@@ -94,7 +95,7 @@
             android:id="@+id/rb_nor"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
+            android:layout_marginStart="40dp"
             android:text="一般"
             />
     </RadioGroup>
@@ -103,13 +104,32 @@
         android:id="@+id/btn_upload"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/img_photo"
+
         android:layout_centerHorizontal="true"
+        android:layout_below="@id/img_photo"
         android:layout_marginTop="230dp"
         android:background="@drawable/button_circle_shape"
         android:text="上传"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:typeface="monospace" />
 
+    <ImageButton
+        android:id="@+id/get_location"
+        android:layout_width="25dp"
+        android:layout_height="30dp"
+        android:layout_below="@id/img_photo"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="135dp"
+        android:background="@drawable/position" />
 
+    <TextView
+        android:id="@+id/message_location"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:layout_below="@id/img_photo"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="140dp"
+        android:layout_toEndOf="@id/get_location"
+        android:text="点击定位"
+        android:textSize="18sp" />
 </RelativeLayout>
