--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -2,7 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/zhuce">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/zhuce"
+    >
 
     <EditText
         android:id="@+id/ett_account"
