--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,11 +10,10 @@
         android:id="@+id/ett_account"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="300dp"
         android:layout_marginStart="50dp"
+        android:layout_marginTop="300dp"
         android:layout_marginEnd="50dp"
-        android:hint="请输入账号"
-        />
+        android:hint="请输入账号" />
 
     <EditText
         android:id="@+id/ett_password"
