--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -8,7 +8,9 @@
         android:id="@+id/iv"
         android:layout_width="120dp"
         android:layout_height="90dp"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:scaleType="matrix"
+        />
 
     <RelativeLayout
         android:layout_width="wrap_content"
